# snailx

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
extra/: bench.rs  tests.rs
src/: cmdline.rs  direct.rs  direct.rs.src  ffi.rs  lib.rs  main.rs  str_checks.rs
src/iter/: args.rs  mapped_args.rs  mod.rs
src/parser/: indexing.rs  mod.rs
